# hybrid-orchestrator

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: channels.yaml
core/: __init__.py
core/agents/: __init__.py  base.py  claude.py
core/channels/: __init__.py  base.py  console.py  email.py  email_listener.py  hub.py  webhook.py
core/orchestrator/: __init__.py  orchestrator.py
core/storage/: __init__.py  models.py  store.py
core/triggers/: __init__.py  engine.py  models.py
examples/: agent_demo.py  demo.py
examples/insurance-demo/: INSHURIK_PATTERNS.md  PRODUCTION_PATTERNS.md
paper/: main.md  outline.md
tests/: __init__.py  test_agents.py  test_channels.py  test_email_channel.py  test_storage.py  test_triggers.py
