[project]
name = "hybrid-orchestrator"
version = "0.1.0"
description = "Design patterns for hybrid human-AI orchestration"
authors = [
    {name = "Pavel Sukhachev", email = "pavel@electromania.llc"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
aiohttp = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
